ChangeLog for ARQ
=================

==== ARQ 2.2

+ Upgrade lucene-core-2.0.0.jar to lucense-2.2.0.jar
  Lucene change means that users can't mix ARQ 2.1, and before,
  with Lucene 2.1.0 or later.

==== ARQ 2.1

+ (experimental for this release - permanent in next)
  GROUP BY, HAVING
  Aggregates: count(*), count(?x), count(distinct *), count(distinct ?x)

+ (experimental for this release - permanent in next) 
  Expressions in SELECT clause
  Expression in brackets, optionally named with "AS ?var"
  Adding an explict namne is strongly encouraged especially if you use
  the SPARQL results format because internal variables variable names
  are not portable. 
    SELECT (?x+?y AS ?z) ?y ?x
    SELECT ?x ?y (?x+?y AS ?sum)  # Print a table of sums
  OpProject can have additional expressions that get added into the
    table from 'project'
  
+ removed old-style (and out-of-date) writers for internal forms: prefix,
  plain and XML forms of a SPARQL query.  The XML form was incomplete
  anyway.  (This does not affect algebra output which is what replaces
  these syntax-based forms).
  
+ Added examples of using Lisp (SISC - A Java-based scheme interpreter). 
  See the directory Lisp/. 
  
+ NodeVar renamed ExprVar (more consistent naming)
  Deprecated tombstones left for next release 

==== ARQ 2.1 beta

+ Cost-based optimizer for basic graph patterns on in-memory graphs. 
  ** Uses the version of jena shipped with this release, can't use an earlier one.   

+ Convert algebra expressions back into a SPARQL query (see OpToSyntax).

+ Old "NodeToLabelMap" => "NodeIsomorphismMap"
  Affects Element and Op ".equalTo" operation signature.

+ Added extension : a graph pattern SERVICE <serviceEndPoint> { pattern }
  ARQ syntax only.
  New algebra operation: OpService

+ Added SSE to the main codebase : http://jena.hpl.hp.com/wiki/SSE

+ Internal changes: the core engines are now Graph/DatasetGraph/Algebra-centric 