@@ -3,11 +3,6 @@ PREFIX  x: <http://example.org/ns#>
 SELECT  ?title ?price
 WHERE
     { ?book dc:title ?title .
-      OPTIONAL
-        {
-          {
-            ?book x:price ?price .
-            FILTER (?title = "TITLE 2") .
-          }
-        } .
+      FILTER(?title = "fred") 
+      ?book x:price ?price .
     }
