@@ -1,0 +1,27 @@
+<?xml version="1.0"?>
+<sparql
+    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+    xmlns:xs="http://www.w3.org/2001/XMLSchema#"
+    xmlns="http://www.w3.org/2005/sparql-results#" >
+  <head>
+    <variable name="title"/>
+    <variable name="price"/>
+  </head>
+  <results>
+    <result>
+      <binding name="title">
+        <literal>TITLE 3</literal>
+      </binding>
+    </result>
+    <result>
+      <binding name="title">
+        <literal>TITLE 2</literal>
+      </binding>
+    </result>
+    <result>
+      <binding name="title">
+        <literal>TITLE 1</literal>
+      </binding>
+    </result>
+  </results>
+</sparql>
